--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@
     margin: 0px;
     font-family: var(--text-font);
     box-sizing: border-box;
-    outline: 2px dashed purple;
+    /* outline: 2px dashed purple; */
 }
 
 body {
